--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="Vt-aDhVzZHEsuwz-KHBpHSTrUD045AyLqJFarfPBDZI" />
     <title>What Are the Best Digital Marketing Agencies in 2025?</title>
     <meta name="description" content="Uncover the best digital marketing agencies in 2025 dominating SEO, PPC, social, and AI-driven growth. Real rankings from Clutch, DesignRush &amp; more.">
     <meta name="keywords" content="best digital marketing agencies 2025, top digital marketing companies, best SEO PPC agencies 2025, performance marketing firms, Clutch top agencies">
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://seospecialist1898-create.github.io/What-Are-the-Best-Digital-Marketing-Agencies-in-2025-/">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LKP9K6JSZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6LKP9K6JSZ');
+</script>
 </head>
 <body>
     <header class="header-curved">
